# maily

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
development/backend/: Dockerfile  README.md  openapi.json  pyproject.toml
development/backend/app/: __init__.py  main.py
development/backend/app/api/: deps.py  router.py  schemas.py
development/backend/app/core/: __init__.py  config.py  crypto.py  database.py  discovery.py  error_handlers.py  errors.py  idempotency.py  logging.py  outbox.py  redis.py  security.py
development/backend/app/core/jobs/: dispatcher.py  lock.py  models.py  outbox_dispatcher.py  registry.py  retry.py  wiring.py
development/backend/app/core/llm/: __init__.py  errors.py  fake.py  observability.py  port.py  registry.py
development/backend/app/db/migrations/: env.py
development/backend/app/domains/labels/: events.py  (+7 more)
development/backend/scripts/: export_openapi.py  gmail_poc.py
development/backend/tests/: conftest.py
development/backend/tests/api/: test_cors.py  test_error_format.py  test_openapi_export.py  test_openapi_metadata.py
development/backend/tests/core/: test_crypto.py  test_discovery.py  test_errors.py  test_idempotency.py  test_llm_config.py  test_logging.py  test_migrations.py  test_outbox.py  test_ready.py  test_security.py
development/backend/tests/integration/: test_ic1_connect_to_sync.py  test_ic2_ic3_sync_to_briefing_and_assistant.py  test_ic4_action_ledger.py  test_ic5_labels_move.py  test_ic7_notifications.py  test_ic8_disconnect_purge.py
(+313 files in other folders)
