[project]
name = "maily-backend"
version = "0.0.0"
description = "Maily API, auth, Gmail integration, and worker backend"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.50.2",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "SQLAlchemy==2.0.51",
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "redis==8.0.1",
  "PyJWT==2.13.0",
  "Authlib==1.7.2",
  "google-auth-oauthlib==1.4.0",
  "python-multipart==0.0.32",
  "httpx==0.28.1",
  "structlog==26.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.20",
  "mypy==2.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
